force-app/main/default/objects/User_Documents__c/User_Documents__c.object-meta.xml
<CustomObject>
    <label>User Documents</label>
    <nameField>
        <displayFormat>UDOC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>