force-app/main/default/objects/User_Documents__c/fields/Additional_Partcipant__c.field-meta.xml
<CustomField>
    <fullName>Additional_Partcipant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Partcipant</label>
    <referenceTo>Additional_Partcipant__c</referenceTo>
    <relationshipLabel>User Documents</relationshipLabel>
    <relationshipName>User_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>