force-app/main/default/objects/User_Documents__c/fields/Applicant_Proposal_Association__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Proposal_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Proposal Association</label>
    <referenceTo>Applicant_Proposal_Association__c</referenceTo>
    <relationshipLabel>User Documents</relationshipLabel>
    <relationshipName>User_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>