force-app/main/default/objects/User_Documents__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>User Documents</relationshipLabel>
    <relationshipName>User_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>