force-app/main/default/objects/User_Documents__c/fields/Documen_type__c.field-meta.xml
<CustomField>
    <fullName>Documen_type__c</fullName>
    <label>Documen Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>