force-app/main/default/objects/User_Documents__c/fields/Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Link__c</fullName>
    <label>Document Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>