force-app/main/default/objects/User_Documents__c/fields/Human__c.field-meta.xml
<CustomField>
    <fullName>Human__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Human</label>
    <referenceTo>Human__c</referenceTo>
    <relationshipLabel>User Documents</relationshipLabel>
    <relationshipName>User_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>