force-app/main/default/objects/User_Documents__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>User Documents</relationshipLabel>
    <relationshipName>User_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>