force-app/main/default/objects/User_Documents__c/fields/Proposal_Participant_Association__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Participant_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Participant Association</label>
    <referenceTo>Proposal_Participant_Association__c</referenceTo>
    <relationshipLabel>User Documents</relationshipLabel>
    <relationshipName>User_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>