force-app/main/default/objects/User_Documents__c/fields/Reviewer_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer Mapping</label>
    <referenceTo>Reviewer_Mapping__c</referenceTo>
    <relationshipLabel>User Documents</relationshipLabel>
    <relationshipName>User_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>