force-app/main/default/objects/User_Documents__c/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <label>Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stages</valueSetName>
    </valueSet>
</CustomField>