force-app/main/default/objects/User_Documents__c/fields/User_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Document_Name__c</fullName>
    <label>User Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>