force-app/main/default/objects/User_Documents__c/fields/WOHI_Collaboration__c.field-meta.xml
<CustomField>
    <fullName>WOHI_Collaboration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WOHI-Collaboration</label>
    <referenceTo>WOHI_Collaboration__c</referenceTo>
    <relationshipLabel>User Documents</relationshipLabel>
    <relationshipName>User_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>