force-app/main/default/objects/User_Documents__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicant_Proposal_Association__c</columns>
    <columns>Roles__c</columns>
    <columns>Upload_Status__c</columns>
    <columns>Document_Link__c</columns>
    <columns>Stages__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>